--- a/challenge_1/style.css
+++ b/challenge_1/style.css
@@ -4,7 +4,7 @@ div {
     margin-left: auto;
     margin-right: auto;
 }
-.row {
+.cell {
     border: 1px solid black; 
     width: 100px;
     height: 100px;
