--- a/challenge_1/style.css
+++ b/challenge_1/style.css
@@ -1,6 +1,7 @@
-div {
+#gameboard {
     display: table;
     border: 1px solid black;
+    margin-top: 100px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -10,4 +11,18 @@ div {
     height: 100px;
     text-align: center;
     font-size: 75px;
+}
+#message {
+    border: table;
+    font-size: 50px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+#refresh {
+    display: table;
+    padding: 10px;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
 }
